kube-proxy/helm.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: portainer-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-portainer-instance
  labels:
    app: test-portainer
spec:
  replicas: 1
  strategy:
    type: "Recreate"
  selector:
    matchLabels:
      app: test-portainer
  template:
    metadata:
      labels:
        app: test-portainer
    spec:
      nodeSelector:
        {}
      serviceAccountName: test-portainer-sa-clusteradmin
      volumes:
         - name: "data"
           persistentVolumeClaim:
             claimName: test-portainer-pvc
      containers:
        - name: test-portainer
          image: "portainerci/portainer:pr5916"
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: https
              containerPort: 9443
              protocol: TCP
            - name: tcp-edge
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 9443
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /
              port: 9443
              scheme: HTTPS
          resources:
            {}
---
apiVersion: v1
kind: Service
metadata:
  name: test-portainer-service
spec:
  externalIPs:
    - 192.168.64.2
  selector:
    app: test-portainer
  ports:
  - protocol: TCP
    port: 9444
    targetPort: 9000
    name: https
  - protocol: TCP
    port: 8001
    targetPort: 8000
    name: edge
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-portainer-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: 192.168.64.2.nip.io
    http:
      paths:
      - path: /portainer(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: test-portainer-service
            port: 
              number: 9444
